v2.6.3.4 - Bug fixed thumbnails on sequences in file requester.
v2.6.3.3 - Bug fixed some DISPLAY environment variables that did not match the
	   documentation for them.
	 - Bug fixed an audio muting problem on some movies.  This was a 
	   regression bug not present in v2.6.1.0.
	 - Bug fixed preferences to always be saved in HOME/.filmaura
	   regardless of platform.
	   In the case of Windows, the path is %HOME%, or %USERPROFILE%, or
	   %HOMEDRIVE%\%HOMEPATH% searched in that order.
	 - Bug fixed drag and drop not centering the image loaded when
	   auto refit image was off.
	 - Bug fixed audio saving without pops, which was a regression bug
	   from v2.6.2.0.
	 - Bug fixed Frame text input to allow entering a frame number.
	 - Bug fixed timecode widget to allow time with periods in it.
	 - Added option in preferences for Display Window. 
	 - Auto fit image when loaded so that pictures don't show from one
	   corner as a result of the update to image drawing routines. 
	 - Adjusted selection to select one pixel if outside data window.
	 - Removed crash when playback of no images before loading.

v2.6.3.2 - Bug fixed anaglyph for different data windows and display windows.
	 - Improved performance of anaglyph and its memory footprint for
	   data windows.
	 - Bug fixed data window in mipmap images.  Now each mipmap shows the
	   proper data window.
	 - Removed old GL drawing routines for gfx cards without textures
	   which were no longer working properly.
	 - Updated color and pixel info updates on seek.
	 - Bug fixed loading of openexr images with data window not appearing
	   in the right location the first time the images were read.
v2.6.3.1 - Fixed selection in all cases for display and data windows.
	 - Added missing ICC_PROFILES environment variable to search for
	   ICC/ICM color profiles.
v2.6.3.0 - Fixed display window for all cases and rewrote drawing routines.
	 - Adapted safe area for display windows.
	 - Fixed side by side stereo images.